[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = "0.4.1"
linera-views = "0.4.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
nft = { path = "../nft" }

[dev-dependencies]
linera-sdk = { version = "0.4.1", features = ["test"] }
webassembly-test = "0.1.0"

[[bin]]
name = "marketplace_contract"
path = "src/contract.rs"

[[bin]]
name = "marketplace_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
